# Chess

./: CMakeLists.txt  README.md
src/: ChessGame.cpp  ChessGame.hpp  Color.cpp  Color.hpp  Point.cpp  Point.hpp  Rect.cpp  Rect.hpp  graphics.cpp  graphics.hpp  main.cpp
